src/main/java/com/example/armaria/errors/ArmeiroNaoEncontradoException.java
package com.example.armaria.errors;

public class ArmeiroNaoEncontradoException extends RuntimeException {
  public ArmeiroNaoEncontradoException(String message) {
    super(message);
  }
}
